# activitypub-federation-rust

./: .gitignore  .woodpecker.yml  Cargo.toml
docs/: 06_http_endpoints_axum.md  08_receiving_activities.md  10_fetching_objects_with_unknown_type.md
examples/: README.md
examples/live_federation/: main.rs
examples/live_federation/activities/: create_post.rs
examples/live_federation/objects/: person.rs  post.rs
examples/local_federation/: instance.rs  main.rs
examples/local_federation/activities/: accept.rs  create_post.rs  follow.rs
examples/local_federation/axum/: http.rs
examples/local_federation/objects/: person.rs  post.rs
src/: activity_queue.rs  activity_sending.rs  config.rs  error.rs  http_signatures.rs  lib.rs
src/actix_web/: inbox.rs  response.rs
src/axum/: inbox.rs
src/fetch/: mod.rs  object_id.rs  webfinger.rs
src/protocol/: context.rs  helpers.rs  values.rs
src/traits/: either.rs  mod.rs  tests.rs
