[package]
name = "activitypub_federation"
version = "0.7.0-beta.11"
edition = "2021"
description = "High-level Activitypub framework"
keywords = ["activitypub", "activitystreams", "federation", "fediverse"]
license = "AGPL-3.0"
repository = "https://github.com/LemmyNet/activitypub-federation-rust"
documentation = "https://docs.rs/activitypub_federation/"

[features]
default = ["axum"]
axum = ["dep:axum", "dep:tower"]
axum-original-uri = ["dep:axum", "axum/original-uri"]

[lints.clippy]
perf = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
dbg_macro = "deny"
inefficient_to_string = "deny"
items-after-statements = "deny"
implicit_clone = "deny"
wildcard_imports = "deny"
cast_lossless = "deny"
manual_string_new = "deny"
redundant_closure_for_method_calls = "deny"
unwrap_used = "deny"

[dependencies]
chrono = { version = "0.4.44", features = ["clock"], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
url = { version = "2.5.8", features = ["serde"] }
sonic-rs = { git = "https://github.com/cloudwego/sonic-rs.git" }
reqwest = { version = "0.13.4", default-features = false, features = [
  "json",
  "stream",
  "rustls",
] }
reqwest-middleware = "0.5.2"
tracing = { version = "0.1.44", features = ["log"] }
base64 = "0.22.1"
rand = "0.8.6"
rsa = "0.9.10"
http = "1.4.1"
sha2 = { version = "0.10.9", features = ["oid"] }
thiserror = "2.0.18"
derive_builder = "0.20.2"
itertools = "0.14.0"
dyn-clone = "1.0.20"
httpdate = "1.0.3"
http-signature-normalization-reqwest = { version = "0.14.1", default-features = false, features = [
  "sha-2",
  "middleware",
  "default-spawner",
] }
http-signature-normalization = "0.7.0"
bytes = "1.11.1"
futures-core = { version = "0.3.32", default-features = false }
pin-project-lite = "0.2.17"
activitystreams-kinds = "0.3.0"
regex = { version = "1.12.3", default-features = false, features = [
  "std",
  "unicode",
] }
tokio = { version = "1.52.3", features = [
  "sync",
  "rt",
  "rt-multi-thread",
  "time",
] }
futures = "0.3.32"
moka = { version = "0.12.15", features = ["future"] }
either = "1.16.0"

# Axum
axum = { git = "https://github.com/tokio-rs/axum.git", features = [
  "json",
], default-features = false, optional = true }
tower = { version = "0.5.3", optional = true }

[dev-dependencies]
anyhow = "1.0.102"
axum = { git = "https://github.com/tokio-rs/axum.git", features = [
  "http1",
  "macros",
  "tokio",
  "query",
], default-features = false }
axum-extra = { version = "0.12.6", features = ["typed-header"] }
env_logger = "0.11.10"
tokio = { version = "1.52.3", features = ["full"] }
reqwest = { version = "0.13.4",features = [
  "rustls"
] }

[profile.dev]
strip = "symbols"
debug = 0

[[example]]
name = "local_federation"
path = "examples/local_federation/main.rs"

[[example]]
name = "live_federation"
path = "examples/live_federation/main.rs"

# Speedup RSA key generation
# https://github.com/RustCrypto/RSA/blob/master/README.md#example
[profile.dev.package.num-bigint-dig]
opt-level = 3
